overlapping issues

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -112,7 +112,6 @@
   padding: 2px 0 0 4px;
   font-size: 0.7em;
   font-weight: bolder;
-  justify-content: center;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -120,6 +119,7 @@
   display: flex;
   align-items: start;
   justify-content: flex-start;
+  box-sizing: border-box;
 }
 
 .event_small {
